--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 clap = { version = "4.3", features = ["derive"] }
+thiserror = "1.0"
