refactor: restructure Python package to follow best practices
The package is restructured to use a proper Python package layout with type hints
and better module organization. Changes include moving the Rust module under _anot,
adding type stubs, and introducing a proper __init__.py for better imports.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
 
 [tool.maturin]
 python-source = "python"
-module-name = "anot"
+module-name = "anot._anot"
 bindings = 'pyo3'
 features = ["pyo3/extension-module"]
 
