--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,11 @@ clap = { version = "4.5", features = ["derive"] }
 thiserror = "1.0"
 pyo3 = "0.23.4"
 walkdir = "2.5.0"
+tree-sitter = "0.24.7"
+tree-sitter-rust = "0.23.2"
+tree-sitter-javascript = "0.23.1"
+tree-sitter-python = "0.23.6"
+streaming-iterator = "0.1.9"
 
 [features]
 extension-module = ["pyo3/extension-module"]
