refactor: re-add main.rs and release-with-debug profile
This makes it easier to profile the program with a profiler (e.g. cargo
flamegraph), even if the Rust main won't be distributed.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,7 @@ streaming-iterator = "0.1.9"
 
 [features]
 extension-module = ["pyo3/extension-module"]
+
+[profile.release-with-debug]
+inherits = "release"
+debug = true
