--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,10 @@ extension-module = ["pyo3/extension-module"]
 [profile.release-with-debug]
 inherits = "release"
 debug = true
+
+[dev-dependencies]
+criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
+
+[[bench]]
+name = "benchmark"
+harness = false
