--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -42,6 +42,7 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
 
       
       - name: Install Rust toolchain
@@ -56,8 +57,8 @@ jobs:
         with:
           tool: cargo-codspeed
 
-      - name: clone rust
-        run: git clone https://github.com/rust-lang/rust
+      - name: clone alacritty
+        run: git clone https://github.com/alacritty/alacritty
 
 
 
