--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -50,14 +50,12 @@ jobs:
         with:
           channel: stable
           cache-target: release
-      
-      - name: "Install codspeed"
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-codspeed
+          bins: cargo-codspeed
 
       - name: clone alacritty
-        run: git clone https://github.com/alacritty/alacritty
+        run: |
+          git clone https://github.com/alacritty/alacritty
+          git -C ./alacritty  checkout 5e78d20c709cb1ab8d44ca7a8702cc26d779227c 
 
       - name: Benchmark build
         run: cargo codspeed build
