--- a/.github/workflows/branch-push.yml
+++ b/.github/workflows/branch-push.yml
@@ -50,7 +50,11 @@ jobs:
         with:
           channel: stable
           cache-target: release
-          bins: cargo-codspeed
+             
+      - name: "Install codspeed"
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-codspeed
 
       - name: clone alacritty
         run: |
